--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "preinstall": "npx npm-force-resolutions"
     },
     "devDependencies": {
         "@inertiajs/vue3": "^1.0.15",
@@ -25,6 +26,7 @@
         "@fortawesome/free-regular-svg-icons": "^6.5.2",
         "@fortawesome/free-solid-svg-icons": "^6.5.2",
         "@fortawesome/vue-fontawesome": "^3.0.6",
-        "lodash": "^4.17.21"
+        "lodash": "^4.17.21",
+        "npm-force-resolutions": "^0.0.10"
     }
 }
