--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,5 +1,5 @@
-name: GitHub Actions Demo
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
+name: Lint
+run-name: ${{ github.actor }} is checking the project for lint
 on: [push]
 jobs:
   Explore-GitHub-Actions:
@@ -12,7 +12,8 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: "8.1"
-      - name: Print PHP version
-        run: echo ${{ steps.setup-php.outputs.php-version }}
-      - name: Output PHP version
-        run: php -v
+      - name: check php syntax
+        uses: overtrue/phplint@8.1
+        with:
+          path: .
+          options: --exclude=*.log
