--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,7 +2,7 @@ name: Lint
 run-name: ${{ github.actor }} is checking the project for lint
 on: [push]
 jobs:
-  Explore-GitHub-Actions:
+  Lint:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository code
